[package]
name = "pg-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", default-features = false, features = ["with-chrono-0_4"], optional = true }
postgres = { version = "0.19", default-features = false, features = ["with-chrono-0_4"], optional = true }
regex = "1.9"
chrono = "0.4"

[features]
tokio-postgres = ["dep:tokio-postgres"]
postgres = ["dep:postgres"]